--- a/smart-ui/src/main/res/values/smui_dimens.xml
+++ b/smart-ui/src/main/res/values/smui_dimens.xml
@@ -11,4 +11,9 @@
     <dimen name="smui_btn_text_size">14sp</dimen>
     <dimen name="smui_btn_border_width">1dp</dimen>
 
+
+    <dimen name="smui_content_spacing_horizontal">16dp
+    </dimen> <!-- margin 和 padding 等使用的内容通用水平间距 -->
+
+
 </resources>
