--- a/smart-ui/src/main/res/values/smui_attrs_base.xml
+++ b/smart-ui/src/main/res/values/smui_attrs_base.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <attr name="smui_content_spacing_horizontal" format="dimension" /> <!-- margin 和 padding 等使用的内容通用水平间距 -->
+
+
     <!--Color-->
 
     <attr name="smui_config_color_primary" format="color" />
@@ -41,7 +44,13 @@
     <!--Dialog-->
     <attr name="smui_dialog_background_dim_amount" format="float" />
     <attr name="smui_dialog_action_style" format="reference" />
-
+    <!-- tips -->
+    <attr name="smui_tip_dialog_bg" format="reference" />
+    <attr name="smui_tip_dialog_min_width" format="dimension" />
+    <attr name="smui_tip_dialog_min_height" format="dimension" />
+    <attr name="smui_tip_dialog_padding_vertical" format="dimension" />
+    <attr name="smui_tip_dialog_padding_horizontal" format="dimension" />
+    <attr name="smui_tip_dialog_margin_horizontal" format="dimension" />
     <!--Dialog-->
 
     <!--Btn-->
@@ -58,5 +67,9 @@
     <attr name="smui_topbar_height" format="dimension" />
     <!--TopBar-->
 
+    <!--Loading-->
+    <attr name="smui_loading_size" format="dimension" />
+    <attr name="smui_loading_color" format="color" />
+    <!--Loading-->
 
 </resources>
