--- a/smart-ui/src/main/res/values/smui_colors.xml
+++ b/smart-ui/src/main/res/values/smui_colors.xml
@@ -14,7 +14,7 @@
     <color name="smui_config_color_black">#333333</color>
     <color name="smui_config_color_tip">#858C96</color>
     <color name="smui_config_color_link">#547FB0</color>
-    <color name="smui_config_color_pressed">#4D000000</color>
+    <color name="smui_config_color_pressed">@color/smui_config_color_25_pure_black</color>
 
 
     <color name="smui_config_color_white">#ffffff</color>
@@ -24,15 +24,14 @@
 
 
     <color name="smui_config_color_transparent">#00000000</color>
-    <color name="smui_config_color_transparent_10">#1A000000</color>
-    <color name="smui_config_color_transparent_20">#33000000</color>
-    <color name="smui_config_color_transparent_30">#4D000000</color>
-    <color name="smui_config_color_transparent_40">#66000000</color>
-    <color name="smui_config_color_transparent_50">#80000000</color>
-    <color name="smui_config_color_transparent_60">#99000000</color>
-    <color name="smui_config_color_transparent_70">#B0000000</color>
-    <color name="smui_config_color_transparent_80">#CC000000</color>
-    <color name="smui_config_color_transparent_90">#E6000000</color>
+    <color name="smui_config_color_pure_black">#000000</color>
+    <color name="smui_config_color_75_pure_black">#C0000000</color>
+    <color name="smui_config_color_60_pure_black">#99000000</color>
+    <color name="smui_config_color_50_pure_black">#80000000</color>
+    <color name="smui_config_color_30_pure_black">#4D000000</color>
+    <color name="smui_config_color_25_pure_black">#40000000</color>
+    <color name="smui_config_color_15_pure_black">#26000000</color>
+    <color name="smui_config_color_10_pure_black">#19000000</color>
 
 
     <color name="smui_config_color_gray_1">#353C46</color>
