--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -42,14 +42,14 @@
             android:padding="10dp"
             android:scaleType="centerInside"
             android:src="@mipmap/ic_launcher"
+            app:menu="@menu/menu_navigation_center_fab"
             app:smui_borderColor="#66000000"
             app:smui_borderWidth="4dp"
             app:smui_isCircle="true"
             app:smui_isClipBg="true"
             app:smui_maskColor="@color/smui_config_color_30_pure_black"
             app:smui_radius="30dp"
-            app:smui_radiusBottomRight="0dp"
-            app:menu="@menu/menu_navigation_center_fab" />
+            app:smui_radiusBottomRight="0dp" />
 
 
     </LinearLayout>
@@ -58,10 +58,10 @@
         android:id="@+id/text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="18sp"
-        android:text="都是负担" />
+        android:text="都是负担"
+        android:textSize="18sp" />
 
-    <com.smart.ui.widget.bottomnavigationView.SMUIBottomNavView
+    <com.smart.ui.widget.bottomnav.SMUIBottomNavView
         android:id="@+id/bottomNavView"
         android:layout_width="match_parent"
         android:layout_height="50dp"
@@ -70,4 +70,17 @@
         app:itemIconTint="@color/tt_DEE0E2"
         app:itemTextColor="@color/tt_DEE0E2"
         app:menu="@menu/menu_navigation_center_fab" />
+
+
+    <com.smart.ui.widget.bottomnav.lottie.SMUILottieBottomNavView
+        android:id="@+id/bottom_nav"
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
+        android:layout_alignParentBottom="true"
+        android:background="@android:color/white"
+        app:menu_selected_height="48dp"
+        app:menu_selected_width="48dp"
+        app:menu_text_show_on_unselected="true"
+        app:menu_unselected_height="40dp"
+        app:menu_unselected_width="40dp" />
 </LinearLayout>
