--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -77,17 +77,17 @@
             app:menu="@menu/menu_navigation_center_fab" />
 
 
-        <com.smart.ui.widget.bottomnav.lottie.SMUILottieBottomNavView
+        <com.smart.ui.widget.bottomnav.SMUILottieBottomNavView
             android:id="@+id/bottom_nav"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_alignParentBottom="true"
             android:background="@android:color/white"
-            app:nav_selected_height="30dp"
-            app:nav_selected_width="30dp"
-            app:nav_text_show_on_unselected="true"
-            app:nav_text_size="12sp"
-            app:nav_unselected_height="30dp"
-            app:nav_unselected_width="30dp" />
+            app:smui_nav_selected_height="30dp"
+            app:smui_nav_selected_width="30dp"
+            app:smui_nav_text_show_on_unselected="true"
+            app:smui_nav_text_size="12sp"
+            app:smui_nav_unselected_height="30dp"
+            app:smui_nav_unselected_width="30dp" />
     </LinearLayout>
 </ScrollView>
