--- a/smart-ui/src/main/res/values/smui_style_widget.xml
+++ b/smart-ui/src/main/res/values/smui_style_widget.xml
@@ -105,4 +105,14 @@
     </style>
 
 
+    <style name="SMUI.LoadingIndicator">
+        <item name="android:minWidth">35dp</item>
+        <item name="android:minHeight">35dp</item>
+        <item name="android:maxWidth">35dp</item>
+        <item name="android:maxHeight">35dp</item>
+        <item name="smui_indicatorName">LineScaleIndicator</item>
+        <item name="smui_indicatorColor">@color/smui_config_color_white</item>
+    </style>
+
+
 </resources>
