--- a/smart-ui/src/main/res/values/smui_themes_compat.xml
+++ b/smart-ui/src/main/res/values/smui_themes_compat.xml
@@ -50,8 +50,8 @@
 
         <!-- tip -->
         <item name="smui_tip_dialog_bg">@drawable/smui_tip_dialog_bg</item>
-        <item name="smui_tip_dialog_min_width">90dp</item>
-        <item name="smui_tip_dialog_min_height">56dp</item>
+        <item name="smui_tip_dialog_min_width">70dp</item>
+        <item name="smui_tip_dialog_min_height">80dp</item>
         <item name="smui_tip_dialog_margin_horizontal">?attr/smui_content_spacing_horizontal</item>
         <item name="smui_tip_dialog_padding_vertical">12dp</item>
         <item name="smui_tip_dialog_padding_horizontal">?attr/smui_content_spacing_horizontal</item>
@@ -61,6 +61,8 @@
         <item name="SMUILoadingStyle">@style/SMUI.Loading</item>
         <item name="smui_loading_size">20dp</item>
         <item name="smui_loading_color">@color/smui_config_color_gray_5</item>
+        <item name="SMUILoadingIndicatorStyle">@style/SMUI.LoadingIndicator</item>
+
         <!-- loading -->
 
     </style>
