--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -92,8 +92,8 @@
 
         <com.smart.ui.widget.loading.SMUILoadingIndicatorView
             android:id="@+id/sLoading"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
             app:smui_indicatorColor="@color/smui_config_color_black" />
     </LinearLayout>
 </ScrollView>
