--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -1,26 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/tvNav"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
         android:background="@color/tt_white"
-        android:text="内容"
-        android:gravity="center"
-        android:textColor="@color/smui_config_color_white" />
+        android:orientation="vertical"
+        android:gravity="center">
+
+        <com.smart.ui.widget.shadow.ShadowBgView
+            android:layout_width="200dp"
+            android:layout_height="100dp"
+            app:smui_backgroundColor="@color/tt_DEE0E2"
+            app:smui_radiusBottomLeft="6dp"
+            app:smui_radiusBottomRight="6dp"
+            app:smui_radiusTopLeft="6dp"
+            app:smui_radiusTopRight="6dp" />
+    </LinearLayout>
 
     <TextView
         android:id="@+id/tvMusic"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:background="@color/smui_config_color_black"
-        android:text="音乐"
         android:gravity="center"
+        android:text="音乐"
         android:textColor="@color/smui_config_color_white" />
 
 
