--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -58,7 +58,7 @@
                 app:lottie_autoPlay="true"
                 app:lottie_fileName="lottie/lottie_boy.json"
                 app:lottie_loop="true"
-                android:visibility="visible" />
+                android:visibility="gone" />
 
 
             <com.smart.ui.widget.image.SMUIImageView
@@ -109,7 +109,7 @@
             app:smui_nav_selected_height="30dp"
             app:smui_nav_selected_width="30dp"
             app:smui_nav_text_show_on_unselected="true"
-            app:smui_nav_text_size="12sp"
+            app:smui_nav_text_size="@dimen/smui_btn_text_big_size"
             app:smui_nav_unselected_height="30dp"
             app:smui_nav_unselected_width="30dp" />
 
