--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -6,7 +6,8 @@
     android:layout_height="match_parent"
     android:gravity="center_horizontal"
     android:orientation="vertical"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:background="@color/tt_white">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -62,19 +63,16 @@
 
 
             <com.smart.ui.widget.image.SMUIImageView
-                android:layout_width="240dp"
-                android:layout_height="300dp"
+                android:id="@+id/ivCircle"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                android:layout_gravity="center"
                 android:layout_centerInParent="true"
-                android:background="#fff"
                 android:clickable="true"
-                android:padding="10dp"
+                android:padding="1dp"
                 android:scaleType="centerInside"
                 android:src="@mipmap/ic_launcher"
-                app:menu="@menu/menu_navigation_center_fab"
-                app:smui_borderColor="#66000000"
-                app:smui_borderWidth="4dp"
                 app:smui_isCircle="true"
-                app:smui_isClipBg="true"
                 app:smui_maskColor="@color/smui_config_color_30_pure_black"
                 app:smui_radius="30dp"
                 app:smui_radiusBottomRight="0dp" />
